# packages/teacher/src/controllers/class.controller.ts
@@ -5,6 +5,7 @@ import {
   Route,
   SuccessResponse,
   Request,
+  Post,
 } from "tsoa";
 import { IClass, IClassRespone } from "../@types/class.type";
 import { ClassService } from "../services/class-services";
@@ -12,12 +13,14 @@ import StatusCode from "../utils/http-status-code";
 import { classSchema } from "../schemas/class-schema";
 import { ValidateInput } from "../middlewares/validate-input";
 import { authorize, RequestWithUser } from "../middlewares/authorize";
+import { PATH_CLASS } from "../routes/path-defs";
 
-@Route("/v1/teachers/class")
+@Route("/v1/teachers")
 export class ClassController extends Controller {
   @SuccessResponse(StatusCode.CREATED, "Created")
   @Middlewares(authorize(["teacher"]))
   @Middlewares(ValidateInput(classSchema))
+  @Post(PATH_CLASS.createClass)
   async CreateClass(
     @Body() requestBody: IClass,
     @Request() req: Express.Request
